0.6.0 (currently working on)
- [#1027] Change: When a user unregisters, hide the registration record
- [#1149] Fix: Registrations in mod2 show the event date's title instead of the topic title
- [#400] Feature: FE users (participants) should be able to unregister from an event (remove their registration)
- [#1143] Change: Sorting for registrations in mod2 and the list view should be descending by crdate
- [#501] Change: Changed the references to locallang*.php to locallang*.xml
- [#210] Change: Cleaned up the locallang*.xml files
- [#212] Fix: Fallback to default language doesn't work consistently
- [#1222] Fix: In the template helper class, provide default values for templateCode and markerNames
- [#1108] Fix: Number of seats in the "my events" view is incorrect for multi-registration events
- [#773] Change: Make our enableFields() wrapper use $GLOBALS['TSFE'] and a singleton cache
- [#1096] Fix: Wrong message in configcheck::hideFields()
- [#1097] Fix: Config check warning if sr_feuser_register is not installed
- [#1092] Feature: Add a field "target groups" to the seminar record
- [#1093] Fix: Problem with the description of speakers in the seminar single view
- [#3] Fix: Allow marker names to be the prefix of others
- [#905] Change: Hide the P for the error message if there are no errors in the FORMidable forms
- [#921] Change: Change all tautology '1's to '1=1' in DB queries to make this extension work with PostgreSQL
- [#458] Fix: Prevent registrations for mere topic records
- [#1007] Change: Recommend/suggest sr_feuser_register
- [#909] Change: Remove the old sr_feuser_register template
- [#900] Change: Suggest the onetimeaccount extension
- [#415] Change: Send "access denied" HTTP headers if access has been denied
- [#1059] Fix: Error with strrpos in the config check
- [#602] Change: In the SQL file, remove NOT NULL from all text and blob fields
- [#366, #612, #669, #802, #1050, #1061] Code cleanup
- [#712] Change: Remove the "needs registration" checkbox